# pay10ad-dumper

./: .jiu.toml  Cargo.toml  README.md
.github/workflows/: android.yml  darwin.yml  musl.yml  release.yml
proto/: update_metadata.proto
src/: args.rs  http.rs  lib.rs  main.rs  metadata.rs  patch.rs  payload_dumper.rs  proto.rs  utils.rs  verify.rs
src/module/: args.rs  http.rs  metadata.rs  payload_dumper.rs  utils.rs  verify.rs
src/module/zip/: local_zip.rs  remote_zip.rs  zip_core.rs
src/zip/: local_zip.rs  mod.rs  remote_zip.rs  zip_core.rs
