[package]
name = "pay10ad-dumper"
version = "0.1.1"
edition = "2024"
readme = "README.md"
description = "Feature-rich Android OTA payload dumper written in Rust"
keywords = ["android", "ota", "extractor", "payload-dumper", "payload-bin"]
categories = ["command-line-utilities", "development-tools"]
include = ["src", "README.md", "LICENSE"]
repository = "https://github.com/PRO-2684/pay10ad-dumper"
homepage = "https://github.com/PRO-2684/pay10ad-dumper"
license = "Apache-2.0"
authors = ["rhythmcache", "PRO-2684"]

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
bzip2 = { version = "0.6", features = ["bzip2-sys", "static"] }
clap = { version = "4.5.42", features = ["derive"] }
digest = "0.10.7"
indicatif = "0.18.0"
prost = "0.14.1"
sha2 = "0.10.9"
rayon = "1.10.0"
memmap2 = "0.9.7"
brotli = "8.0.1"
zstd = "0.13.3"
num_cpus = "1.17.0"
rand = "0.9.2"
hex = "0.4.3"
xz4rust = "0.2.1"
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.141", optional = true }
bsdiff = { version = "0.2.1", optional = true }
once_cell = { version = "1.21.3", optional = true }
reqwest = { version = "0.12.22", default-features = false, features = [
    "default-tls",
    "http2",
    "system-proxy",
    "blocking",
    "gzip",
], optional = true }
webpki-roots = { version = "1.0.2", optional = true }
reqwest-hickory-resolver = { version = "0.2.0", optional = true }
url = { version = "2.5.4", optional = true }

[features]
default = ["local_zip", "remote_ota", "metadata"]
remote_ota = ["dep:url", "dep:reqwest", "dep:webpki-roots"]
hickory-dns = ["remote_ota", "dep:once_cell", "dep:reqwest-hickory-resolver"]
differential_ota = ["dep:bsdiff"]
local_zip = []
metadata = ["dep:serde", "dep:serde_json"]

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
