[package]
name = "pay10ad-dumper"
version = "0.1.3"
edition = "2024"
readme = "README.md"
description = "Feature-rich Android OTA payload dumper written in Rust"
keywords = ["android", "ota", "extractor", "payload-dumper", "payload-bin"]
categories = ["command-line-utilities", "development-tools"]
include = ["src", "README.md", "LICENSE"]
repository = "https://github.com/PRO-2684/pay10ad-dumper"
homepage = "https://github.com/PRO-2684/pay10ad-dumper"
license = "Apache-2.0"
authors = ["rhythmcache", "PRO-2684"]

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
bzip2 = { version = "0.6", features = ["bzip2-sys", "static"] }
digest = "0.10.7"
indicatif = "0.18.0"
prost = "0.14.1"
sha2 = "0.10.9"
rayon = "1.10.0"
memmap2 = "0.9.7"
zstd = "0.13.3"
num_cpus = "1.17.0"
hex = "0.4.3"
xz4rust = "0.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
bsdiff = "0.2.1"
reqwest = { version = "0.12.22", default-features = false, features = [
    "default-tls",
    "http2",
    "system-proxy",
    "blocking",
    "gzip",
] }
url = "2.5.4"
argh = { version = "0.1.13", default-features = false, features = ["help"], optional = true }

[[bin]]
name = "pay10ad-dumper"
required-features = ["cli"]

[features]
cli = ["argh"]

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
